# nanoCodeRL

./: .gitignore  CLAUDE.md  Dockerfile.sandbox  LICENSE  README.md  pyproject.toml  results.tsv
nanoCodeRL/: __init__.py  config.py  data.py  sandbox.py
notes/: autorl_program.md  improvement_plan.md
runs/: quickstart.sh  setup_runpod.sh
scripts/: agent_demo.py  autorl.py  continue_if_promising.py  eval.py  prefetch.py  smoke_test.py  test_reward.py  train.py
