[project]
name = "nanoCodeRL"
version = "0.1.0"
description = "Minimal coding agent RL — DAPO on Qwen3.5-4B-Base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "transformers==5.2.0",
    "trl==0.17.1",
    "datasets==3.4.0",
    "accelerate==1.3.0",
    "peft==0.15.1",
    "bitsandbytes==0.45.0",
    "wandb==0.19.1",
    "huggingface-hub[cli]==0.28.1",
    "unsloth==2026.3.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nanoCodeRL*"]

[dependency-groups]
dev = [
    "pytest",
]
