[project]
name = "nanoCodeRL"
version = "0.1.0"
description = "Minimal coding agent RL — DAPO on Qwen3.5-4B"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.51.0",
    "trl>=0.17.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.41.0",
    "wandb>=0.15.0",
    "huggingface-hub[cli]>=0.20.0",
    "unsloth>=2024.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]
vllm = ["vllm>=0.8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nanoCodeRL*"]

[dependency-groups]
dev = [
    "pytest",
]
